--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "type": "commonjs",
   "dependencies": {
     "better-sqlite3": "^9.4.3",
+    "cors": "^2.8.5",
     "ethers": "^6.15.0",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "merkletreejs": "^0.6.0",
     "sha3": "^2.1.4"
   },
