Refactor: improve code quality and fix shutdown timer race condition
- Fix shutdown timer scoping in server/index.js to prevent race conditions
- Remove redundant MAX_SUPPLY check in claim() (already in _mint)
- Rename misleading reentrancy test to double-claim test
- Add proof verification to buildMerkle.js for validation
- Add compile/lint/typecheck scripts to package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "npx hardhat test",
+    "compile": "npx hardhat compile",
+    "lint": "npx hardhat compile",
+    "typecheck": "npx hardhat compile",
     "build:merkle": "node scripts/buildMerkle.js",
     "serve": "npx http-server public -p 4173",
     "dev": "node server/index.js"
